----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2003-10-11 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/grab_globals.lib.php3: bug 807047, better fix
    * tbl_select.php3: bug 821350: escape single quotes in table
      Search page

2003-10-10 Marc Delisle  <lem9@users.sourceforge.net>
    * footer.inc.php3: bug 819036, undefined function PMA_setHistory()

2003-10-10 Michal Cihar  <nijel@users.sourceforge.net>
    * libraries/export/sql.php3: Fix PMA_getTableContentOld (bug #820932).
    * left.php3: Konqueror 3 and Opera 7 works with tree view (bug #820717).
    * scripts/create-release.sh: Generate MD5 sums (RFE #748415).
    * Documentation, config.inc.php3, scripts/create_tables.sql: Change
      default phpMyAdmin table names from PMA_* to pma_*.

2003-10-07 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/russian*: updated, thanks to Artyom Rabzonov

2003-10-07 Michal Cihar  <nijel@users.sourceforge.net>
    * Documentation: Another hint for creating primary/unique keys.

2003-10-06 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/slovak: Updated, thanks to Lubos Klokner (erkac).

2003-10-06 Michal Cihar  <nijel@users.sourceforge.net>
    * tbl_replace.php3: Do not include query in redirect url if too long.

2003-10-02 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/grab_globals.lib.php3: bug 807047, protect POST variables
      against cookies of the same name
    * libraries/display_tbl.lib.php3: bug 816658, the multi-row delete
      icon should not be displayed in all cases

2003-10-01 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/slovenian update, thanks to Kositer Uros
    * lang/norwegian:  Updated, thanks to Sven-Erik Andersen (sven-erik).
    * libraries/export/sql.php3: bug 815822 Undefined index/offset
    * lang/turkish update, thanks to Bora Alioglu

2003-10-01 Alexander M. Turek  <rabus@users.sourceforge.net>
    * translators.html: Better link.
